@@ -10,6 +10,7 @@ class SecurionPayTest < Test::Unit::TestCase
 
     @credit_card = credit_card
     @declined_card = credit_card('4916018475814056')
+    @new_credit_card = credit_card('4012888888881881')
     @amount = 2000
     @refund_amount = 300
 
@@ -17,6 +18,38 @@ class SecurionPayTest < Test::Unit::TestCase
       billing_address: address,
       description: 'Store Purchase'
     }
+  end
+
+  def test_successful_store
+    @gateway.expects(:ssl_post).returns(successful_authorize_response)
+    @gateway.expects(:ssl_post).returns(successful_new_customer_response)
+    @gateway.expects(:ssl_post).returns(successful_void_response)
+
+    response = @gateway.store(@credit_card, @options)
+    assert_success response
+    assert_match %r(^cust_\w+$), response.authorization
+    assert_equal "customer", response.params["objectType"]
+    assert_match %r(^card_\w+$), response.params["cards"][0]["id"]
+    assert_equal "card", response.params["cards"][0]["objectType"]
+
+    @gateway.expects(:ssl_post).returns(successful_authorize_response)
+    @gateway.expects(:ssl_post).returns(successful_void_response)
+
+    @options[:customer_id] = response.authorization
+    response = @gateway.store(@new_credit_card, @options)
+    assert_success response
+    assert_match %r(^card_\w+$), response.params["card"]["id"]
+    assert_equal @options[:customer_id], response.params["card"]["customerId"]
+
+    @gateway.expects(:ssl_request).returns(successful_customer_update_response)
+
+    response = @gateway.customer(@options)
+    assert_success response
+    assert_equal @options[:customer_id], response.params["id"]
+    assert_equal "401288", response.params["cards"][0]["first6"]
+    assert_equal "1881", response.params["cards"][0]["last4"]
+    assert_equal "424242", response.params["cards"][1]["first6"]
+    assert_equal "4242", response.params["cards"][1]["last4"]
   end
 
   def test_successful_purchase
@@ -394,7 +427,8 @@ class SecurionPayTest < Test::Unit::TestCase
         "expMonth" : "11",
         "expYear" : "2022",
         "brand" : "Visa",
-        "type" : "Credit Card"
+        "type" : "Credit Card",
+        "customerId" : "cust_OWTybrAX3JP4Bbv1xnkpnHEj"
       },
       "captured" : false,
       "refunded" : false,
@@ -567,7 +601,8 @@ class SecurionPayTest < Test::Unit::TestCase
         "expMonth" : "9",
         "expYear" : "2016",
         "brand" : "Visa",
-        "type" : "Credit Card"
+        "type" : "Credit Card",
+        "customerId" : "cust_OWTybrAX3JP4Bbv1xnkpnHEj"
       },
       "captured" : true,
       "refunded" : true,
@@ -628,7 +663,10 @@ class SecurionPayTest < Test::Unit::TestCase
         "customerId" : "cust_OWTybrAX3JP4Bbv1xnkpnHEj",
         "brand" : "Visa",
         "type" : "Credit Card"
-      } ]
+      } ],
+      "metadata" : {
+        "chargeId" : "char_hWKC9C5wkXuiTLsxdHzncea3"
+      }
     }
     RESPONSE
   end
@@ -673,7 +711,7 @@ class SecurionPayTest < Test::Unit::TestCase
   def successful_customer_update_response
     <<-RESPONSE
     {
-      "id" : "cust_QwQdf2Y1fjCFKrchTtSmwpUM",
+      "id" : "cust_OWTybrAX3JP4Bbv1xnkpnHEj",
       "created" : 1426756430,
       "objectType" : "customer",
       "email" : "test@email.pl",
@@ -683,24 +721,24 @@ class SecurionPayTest < Test::Unit::TestCase
         "id" : "card_9k3THkOkmz8OQpJejlaZGizB",
         "created" : 1426759508,
         "objectType" : "card",
-        "first6" : "401200",
-        "last4" : "0007",
+        "first6" : "401288",
+        "last4" : "1881",
         "expMonth" : "11",
         "expYear" : "2022",
         "cardholderName" : "Tobias Luetke",
-        "customerId" : "cust_QwQdf2Y1fjCFKrchTtSmwpUM",
+        "customerId" : "cust_OWTybrAX3JP4Bbv1xnkpnHEj",
         "brand" : "Visa",
         "type" : "Credit Card"
       }, {
         "id" : "card_gF90YA1KO56BSjkyQmCGfjO5",
         "created" : 1426756429,
         "objectType" : "card",
-        "first6" : "401288",
-        "last4" : "1881",
+        "first6" : "424242",
+        "last4" : "4242",
         "expMonth" : "11",
         "expYear" : "2022",
         "cardholderName" : "Tobias Luetke",
-        "customerId" : "cust_QwQdf2Y1fjCFKrchTtSmwpUM",
+        "customerId" : "cust_OWTybrAX3JP4Bbv1xnkpnHEj",
         "brand" : "Visa",
         "type" : "Credit Card"
       } ]
