@@ -11,6 +11,7 @@
 * Sage: Always pass along the billing state [duff]
 * VisaNet Peru: New gateway support [shasum]
 * Worldpay: Allow installationId to be specified at transaction time [duff]
+* SecurionPay: Support store [shasum]
 
 
 == Version 1.58.0 (March 1, 2016)
